image cropping fix

--- a/src/Components/ListEvents/listEvents.scss
+++ b/src/Components/ListEvents/listEvents.scss
@@ -106,7 +106,7 @@
     img{
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
   &__button-further{
